<resources>
    <string name="app_name">Stouz</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_language">Change language</string>
    <string name="reset_password">Reset password</string>
    <string name="back_to_login">Back to login page</string>
    <string name="change_theme">Change Theme</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="select_language">Select Language</string>
    <string name="opening_hours">Opening Hours: %1$s</string>
    <string name="title_promotions">Promotions</string>
    <string name="title_restaurant_detail">Restaurant Detail</string>
    <string name="opinions">Opinions</string>
    <string name="add_comment">Add new comment</string>

</resources>